@@ -12,6 +12,7 @@ import org.bukkit.Bukkit;
 import org.bukkit.DyeColor;
 import org.bukkit.Material;
 import org.bukkit.World.Environment;
+import org.bukkit.block.Banner;
 import org.bukkit.entity.Animals;
 import org.bukkit.entity.Creeper;
 import org.bukkit.entity.Drowned;
@@ -43,12 +44,11 @@ import org.bukkit.event.player.PlayerItemConsumeEvent;
 import org.bukkit.event.player.PlayerLevelChangeEvent;
 import org.bukkit.event.world.StructureGrowEvent;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.BlockStateMeta;
 import org.bukkit.potion.PotionEffectType;
 import org.spigotmc.event.entity.EntityMountEvent;
 
 import me.aleiv.core.paper.Core;
-import me.aleiv.core.paper.Game.BingoFase;
-import me.aleiv.core.paper.Game.BingoRound;
 import me.aleiv.core.paper.Game.Challenge;
 
 public class ChallengeEasy implements Listener {
@@ -65,23 +65,78 @@ public class ChallengeEasy implements Listener {
     private final List<Material> redstoneBlocks = List.of(Material.REDSTONE_BLOCK, Material.REDSTONE_TORCH);
     private final List<String> interactableBlock = List.of("BUTTON", "LEVER", "PRESSURE");
 
+    private final List<Material> flowers = List.of(Material.DANDELION, Material.POPPY, 
+        Material.BLUE_ORCHID, Material.ALLIUM, Material.AZURE_BLUET, Material.OXEYE_DAISY, 
+            Material.WITHER_ROSE, Material.SUNFLOWER, Material.PEONY, Material.CORNFLOWER);//CONSIDER TULIP
+
+    @EventHandler
+    public void onInteract(PlayerInteractEvent e){
+        var game = instance.getGame();
+        if (!game.isChallengeEnabledFor(Challenge.JARDINERO) || !game.isChallengeEnabledFor(Challenge.SHIELD_BANNER)) return;
+        var block = e.getClickedBlock();
+        var hand = e.getItem();
+        var player = e.getPlayer();
+        var manager = instance.getBingoManager();
+        var table = manager.findTable(player.getUniqueId());
+
+        if(table == null) return;
+
+        if(block != null && hand != null && block.getType() == Material.FLOWER_POT 
+            && (flowers.contains(hand.getType()) || hand.getType().toString().contains("TULIP"))){
+
+                manager.attempToFind(player, Challenge.JARDINERO, hand.getType().toString());
+
+        }else if(hand != null && hand.getType() == Material.SHIELD){
+
+            var list = table.getPlayerStream().toList();
+            if(list.size() != table.getMembers().size()) return;
+            
+            if(isTeamBlocking(list, player)){
+
+                manager.attempToFind(player, Challenge.SHIELD_BANNER, hand.getType().toString());
+            }
+        }
+    }
+
+    public boolean isTeamBlocking(List<Player> players, Player p){
+
+        for (var player : players) {
+            if(player.getUniqueId().getMostSignificantBits() == p.getUniqueId().getMostSignificantBits()) continue;
+
+            var item = player.getInventory().getItemInMainHand();
+            if(item == null || item.getType() != Material.SHIELD || !player.isBlocking()){
+                return false;
+            }
+            var meta = (BlockStateMeta) item.getItemMeta();
+            var state = meta.getBlockState();
+            var banner = (Banner) state;
+
+            if(banner.getBaseColor().toString().contains("WHITE")){
+                return false;
+            }
+        } 
+
+        if(players.isEmpty()) return false;
+    
+        return true;
+    }
+
     @EventHandler
     public void onCampfire(BlockCookEvent e){
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.CAMPFIRE_CAMPING)) return;
 
         var block = e.getBlock();
         if(block.getType() == Material.CAMPFIRE || block.getType() == Material.SOUL_CAMPFIRE){
             var manager = instance.getBingoManager();
 
-            var camping = block.getLocation().getNearbyPlayers(10).stream().map(p -> p.getUniqueId()).collect(Collectors.toList());
+            var camping = block.getLocation().getNearbyPlayers(10).stream().map(p -> p.getUniqueId()).toList();
             for (var uuid : camping) {
                 var table = manager.findTable(uuid);   
                 var players = table.getMembers();
                 var player = Bukkit.getPlayer(uuid);
 
-                if (player != null && table != null && isTeamCamping(players, camping)) {
+                if (player != null && table != null && isTeamNearby(players, camping)) {
 
                     manager.attempToFind(player, Challenge.CAMPFIRE_CAMPING, "");
                     return;
@@ -91,9 +146,9 @@ public class ChallengeEasy implements Listener {
         }
     }
 
-    public boolean isTeamCamping(List<UUID> players, List<UUID> camping){
+    public boolean isTeamNearby(List<UUID> players, List<UUID> uuidsTeam){
         for (UUID uuid : players) {
-            if(!camping.contains(uuid)){
+            if(!uuidsTeam.contains(uuid)){
                 return false;
             }
         }
@@ -103,8 +158,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onJump(PlayerJumpEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.JUMP_BED)) return;
 
         var block = e.getPlayer().getLocation().getBlock().getType().toString();
 
@@ -125,8 +179,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onLVL(PlayerLevelChangeEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.LVL_40)) return;
 
         var manager = instance.getBingoManager();
 
@@ -150,8 +203,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onDamage(EntityDamageEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.HALF_HEART)) return;
 
         var entity = e.getEntity();
 
@@ -180,8 +232,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onShield(PlayerItemBreakEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.SHIELD_BREAK)) return;
 
         var item = e.getBrokenItem();
 
@@ -201,8 +252,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onEntityPotionEffect(EntityPotionEffectEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.DOLPHIN_SWIM) || !game.isChallengeEnabledFor(Challenge.GET_POISON)) return;
 
         if (e.getEntity() instanceof Player) {
 
@@ -232,8 +282,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onSkyHigh(PlayerJumpEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.MAXIMUM_HEIGHT)) return;
 
         var manager = instance.getBingoManager();
         var player = e.getPlayer();
@@ -248,8 +297,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void growTree(StructureGrowEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.NETHER_TREE)) return;
 
         var player = e.getPlayer();
         if (player == null) return;
@@ -268,8 +316,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onShootTarget(ProjectileHitEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.SHOOT_TARGET)) return;
 
         var block = e.getHitBlock();
         if (block != null && block.getType() == Material.TARGET) {
@@ -291,8 +338,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onItemConsume(PlayerItemConsumeEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.EAT_FOOD)) return;
 
         var item = e.getItem();
         if (item != null && (item.getType() != Material.POTION || item.getType() != Material.MILK_BUCKET
@@ -313,8 +359,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void mineMinerals(BlockBreakEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.BREAK_RULE_1) || !game.isChallengeEnabledFor(Challenge.MINE_MINERALS)) return;
 
         var block = e.getBlock();
         var manager = instance.getBingoManager();
@@ -334,8 +379,9 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void entityDeath(EntityDeathEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.DROWN_VILLAGER) || !game.isChallengeEnabledFor(Challenge.PINK_SHEEP_BIOME) 
+            || !game.isChallengeEnabledFor(Challenge.HOSTILE_KILL) || !game.isChallengeEnabledFor(Challenge.ANIMAL_KILL)
+            || !game.isChallengeEnabledFor(Challenge.ACUATIC_KILL)) return;
 
         var entity = e.getEntity();
         var player = entity.getKiller();
@@ -387,8 +433,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void entityInteractEvent(PlayerInteractAtEntityEvent e) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.CREEPER_IGNITE) || !game.isChallengeEnabledFor(Challenge.COLOR_SHEEP)) return;
 
         var player = e.getPlayer();
         var entity = e.getRightClicked();
@@ -414,8 +459,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void armorEquipped(PlayerArmorChangeEvent event) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.ARMOR_MATERIALS)) return;
 
         Player player = event.getPlayer();
         List<String> equippedItems = new ArrayList<>();
@@ -439,8 +483,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void playerInteractBlock(PlayerInteractEvent event) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.REDSTONE_SIGNAL) || !game.isChallengeEnabledFor(Challenge.BONE_MEAL_COMPOSTER)) return;
 
         var player = event.getPlayer();
         var block = event.getClickedBlock();
@@ -467,8 +510,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onMount(EntityMountEvent event) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.PURPLE_LLAMA)) return;
 
         if (event.getEntity() instanceof Player player && event.getMount() instanceof Llama llama) {
             if (llama.getInventory().contains(new ItemStack(Material.PURPLE_CARPET))) {
@@ -484,8 +526,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onEntityDamageByEntity(EntityDamageByEntityEvent event) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.ANVIL_DAMAGE)) return;
 
         if (event.getEntity() instanceof Player player) {
             if (event.getCause() == DamageCause.FALLING_BLOCK && event.getDamager() instanceof FallingBlock fallingBlock) {
@@ -503,8 +544,7 @@ public class ChallengeEasy implements Listener {
     @EventHandler
     public void onBlockPlace(BlockPlaceEvent event) {
         var game = instance.getGame();
-        if (game.getBingoFase() != BingoFase.CHALLENGE && game.getBingoRound() != BingoRound.ONE)
-            return;
+        if (!game.isChallengeEnabledFor(Challenge.REDSTONE_SIGNAL)) return;
 
         Player player = event.getPlayer();
         if (redstoneBlocks.contains(event.getBlockPlaced().getType())) {
@@ -515,5 +555,7 @@ public class ChallengeEasy implements Listener {
             }
         }
     }
+
+
 
 }
